[gd_scene load_steps=4 format=3 uid="uid://cmjb5semlrt7j"]

[ext_resource type="Script" uid="uid://depuccojmwxyu" path="res://ui/loading screen/loading_screen.gd" id="1_pi80x"]
[ext_resource type="PackedScene" uid="uid://bd1ve63dc5boq" path="res://ui/loading screen/progress transition/progress_transition.tscn" id="2_yhog6"]
[ext_resource type="PackedScene" uid="uid://c3355g528gei2" path="res://ui/loading screen/fade transition/fade_transition.tscn" id="3_8afgi"]

[node name="LoadingScreen" type="CanvasLayer"]
layer = 2
script = ExtResource("1_pi80x")

[node name="ProgressTransition" parent="." instance=ExtResource("2_yhog6")]

[node name="FadeTransition" parent="." instance=ExtResource("3_8afgi")]
